Bugfix overflow-x for phone screens and adjust portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,11 +254,6 @@ textarea {
 
 phone screen layout*/
 @media screen and (max-width: 480px) {
-    * {
-        overflow-x: hidden;
-        scroll-behavior: smooth;
-    }
-
     .video {
         width: 287px;
         height: 159px;
@@ -321,12 +316,13 @@ phone screen layout*/
     }
 
     .contact-form {
-        max-width: 270px;
+        max-width: 230px;
+        padding: 15px;
         bottom: -38%
     }
 
     textarea {
-        width: 270px;
+        width: 230px;
     }
 }
 
